--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: Elfish Paladin
 
 # Short bio or description (displayed in the header)
-description: Writer.
+description: Intensity, notes, sketches.
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://raw.githubusercontent.com/barryclark/jekyll-now/master/images/jekyll-logo.png
+avatar: 
 
 #
 # Flags below are optional
